--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-size: 16px;
 }
 
 a {
@@ -13,4 +14,24 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+#__next {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+  justify-content: space-between;
+}
+
+#body {
+  background-color: lavender;
+  flex-grow: 1;
+}
+
+header {
+  background-color: teal;
+}
+
+footer {
+  background-color: tan;
 }
