--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,13 @@
+/* 
+ * Resets & Globals
+ */
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    font-size: 16px;
+  font-size: 16px;
 }
 
 a {
@@ -29,9 +32,61 @@ a {
 }
 
 header {
-  background-color: teal;
+  background-color: rgb(154, 154, 154);
+  border-bottom: 2px solid #000;
 }
 
 footer {
-  background-color: tan;
+  background-color: rgb(154, 154, 154);
+  border-top: 2px solid #000;
 }
+
+/* 
+ * Containers
+ */
+
+.content-wrapper {
+  margin: 0 auto;
+  max-width: 72rem;
+  padding: 0 1rem;
+}
+
+/* 
+ * Flex Grid
+ */
+
+.flex-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -0.5rem -1rem;
+}
+
+.flex-grid__item {
+  margin: 0 hSpace 1rem;
+  width: calc((100% / 3) - (2 * 0.5rem));
+}
+
+@media screen and (max-width: 768px) {
+  .flex-grid__item {
+    width: calc(50% - (2 * 0.5rem));
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .flex-grid {
+    justify-content: center;  
+  }
+  
+  .flex-grid__item {
+    width: 100%;
+  }
+}
+
+
+/* 
+ * Utils
+ */
+
+ .ta--center {
+   text-align: center;
+ }
