--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,7 @@ a {
 #body {
   background-color: lavender;
   flex-grow: 1;
+  padding: 2rem 0 3rem;
 }
 
 header {
@@ -62,7 +63,10 @@ footer {
 }
 
 .flex-grid__item {
-  margin: 0 hSpace 1rem;
+  border: 2px solid rgb(174, 174, 174);
+  border-radius: 8px;
+  display: block;
+  margin: 0 0.5rem 1rem;
   width: calc((100% / 3) - (2 * 0.5rem));
 }
 
@@ -82,6 +86,14 @@ footer {
   }
 }
 
+/* 
+ * Note Preview List
+ */
+
+ .preview {
+   cursor: pointer;
+   padding: 1rem 2rem;
+ }
 
 /* 
  * Utils
