add new item button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,3 +102,9 @@ footer {
  .ta--center {
    text-align: center;
  }
+
+.flex--center {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
