--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,9 +10,13 @@ body {
   font-size: 16px;
 }
 
+body {
+  background-color: lavender;
+}
+
 a {
   color: inherit;
-  /* text-decoration: none; */
+  text-decoration: none;
 }
 
 * {
@@ -27,7 +31,6 @@ a {
 }
 
 #body {
-  background-color: lavender;
   flex-grow: 1;
   padding: 2rem 0 3rem;
 }
