--- a/styles/styles.css
+++ b/styles/styles.css
@@ -141,3 +141,14 @@ footer {
  form input[type="submit"] {
    cursor: pointer;
  }
+
+ form .delete-btn {
+   display: block;
+   appearance: none;
+   background-color: crimson;
+   border: none;
+   color: #fff;
+   cursor: pointer;
+   margin: 2rem auto 0;
+   padding: 0.5rem;
+ }
